--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div>
 	<h1 class="title"><a href="/">{{ site.name }}</a></h1>
 	<div class="remark">{{ site.description }}</div>
 </div>
