--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,11 @@ li {
 	
 .content {
 	flex: 0 0 32%;
-	max-width: 32%;}
+	max-width: 32%;
+	background: #101420;
+	border: 4px solid #080010;
+	border-radius: 8px;
+	margin: 4px;}
 
 BLOCKQUOTE {
 	font-size: 10.0pt;}
@@ -133,7 +137,7 @@ BLOCKQUOTE {
 pre {
 	margin-top: 0px;
 	margin-right: 0px;
-	margin-bottom: 0.0px;
+	margin-bottom: 0px;
 	margin-left: 16px;
 	text-align: left;
 	line-height: 100%;
