fix: fixed jekyll
fix: Обновлены стили оформления сайта
add: Добавлен раздел проектов
fix: Мелкие изменения в теме оформления
fix: Мелкие исправления в тексте

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,6 @@
 	<h1 class="title"><a href="/">{{ site.name }}</a></h1>
 	<div class="remark">{{ site.description }}</div>
 </div>
+<hr class="gray" />
 	{% include menu.html %}
-<hr />
+<hr class="gray" />
