--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,5 +11,5 @@ layout: default
 	{{ content }}
 
 	<div class="right"><a href="/{{ page.title }}" title="{{ page.title }}">Перейти на страницу проекта</a></div>
-	<div class="right"><a href="https://github.com/3side/{{ page.title }}" title="{{ page.title }}">Перейти в репозиторий проекта</a></div>
+	<div class="right"><a href="https://github.com/community-third-party/{{ page.title }}" title="{{ page.title }}">Перейти в репозиторий проекта</a></div>
 </div>
