--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,10 @@
 <div class="menu">
 	<ul id="menubar">
 		<li><a href="/">Главная</a></li>
-		<li><a href="#">Проекты</a>
+		<li><a href="/projects">Проекты</a>
 		<ul>
 			{% for post in site.categories.project %}
-				<li><a href="{{ post.url }}" title="{{ post.description }}">{{ post.title }}</a>
+				<li><a href="{{ post.url }}" title="{{ post.description }}">{{ post.title }}</a></li>
 			{% endfor %}
 		</ul>
 		</li>
