--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,12 @@
 	{% include head.html %}
 
 	<body>
+		<div class="background">
 
 			{% include header.html %}
 
 			{{ content }}
 
+		</div>
 	</body>
 </html>
